# nfo-viewer

./: README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-tauri.yml
public/: sample.nfo
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AboutModal.tsx  DropZone.tsx  NfoRenderer.tsx  Toolbar.tsx
src/lib/: cp437.ts  nfo-parser.ts  tauri.ts  themes.ts
src/types/: tauri-plugins.d.ts
