[package]
name = "nfo-viewer"
version = "1.0.0"
description = "A cross-platform NFO file viewer"
authors = []
license = "MIT"
repository = "https://github.com/barretts/nfo-viewer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
